Remove background from artwork dialog and ensure it uses dialog and titlebar spacing vars. Restyle community feed into in panel-inset style.

--- a/css/variables.css
+++ b/css/variables.css
@@ -1804,15 +1804,6 @@
   --zehn-size-panel-inset-padding: var(--zehn-size-padding-xs);
   --zehn-size-panel-inset-radius: var(--zehn-size-radius-xs);
 
-  --zehn-size-panel-library-padding: var(--zehn-size-padding-md);
-  --zehn-size-panel-downloads-padding: var(--zehn-size-padding-md);
-  --zehn-size-panel-activity-padding: var(--zehn-size-padding-md);
-  --zehn-size-panel-community-padding: var(--zehn-size-padding-md);
-  --zehn-size-panel-details-padding: var(--zehn-size-padding-md);
-
-  --zehn-size-panel-details: 400px;
-  --zehn-size-panel-community-info: 32px;
-
   /* BUTTONS */
   --zehn-size-button-md: 32px;
   --zehn-size-button-lg: 48px;
@@ -2048,6 +2039,21 @@
   --zehn-size-library-playbar: 48px;
   --zehn-size-library-playbar-action: 218px;
   --zehn-size-library-showcase: 48px;
+
+  --zehn-size-library-panel-padding: var(--zehn-size-padding-md);
+
+  --zehn-size-downloads-panel-padding: var(--zehn-size-padding-md);
+
+  --zehn-size-spotlight-panel-padding: var(--zehn-size-padding-md);
+  --zehn-size-spotlight-panel-header: 32px;
+
+  --zehn-size-activity-panel-padding: var(--zehn-size-padding-md);
+
+  --zehn-size-community-panel-padding: var(--zehn-size-padding-md);
+  --zehn-size-community-panel-info: 32px;
+
+  --zehn-size-details-panel-padding: var(--zehn-size-padding-md);
+  --zehn-size-details-panel: 400px;
 
   /* MODAL */
   --zehn-size-modal-radius: var(--zehn-size-radius-md);
